--- a/register.html
+++ b/register.html
@@ -4,67 +4,104 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Register | StudyHub</title>
+
+  <!-- Bootstrap + AOS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/style.css" />
+
+  <style>
+    body {
+      background: linear-gradient(135deg, #6610f2, #0d6efd);
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+    }
+
+    .auth-card {
+      background: white;
+      color: #212529;
+      border-radius: 18px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+      padding: 40px 35px;
+      width: 100%;
+      max-width: 420px;
+      text-align: center;
+      transition: all 0.3s ease;
+    }
+
+    .auth-card:hover {
+      transform: translateY(-5px);
+    }
+
+    .form-control {
+      border-radius: 10px;
+      padding: 10px;
+    }
+
+    .btn-gradient {
+      background: linear-gradient(45deg, #6610f2, #0d6efd);
+      border: none;
+      color: white;
+      font-weight: 600;
+      border-radius: 10px;
+      transition: 0.3s;
+    }
+
+    .btn-gradient:hover {
+      transform: scale(1.05);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+    }
+
+    .link {
+      color: #6610f2;
+      font-weight: 500;
+      text-decoration: none;
+    }
+
+    .link:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
+
 <body>
-  <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="container">
-      <a class="navbar-brand" href="home.html">📘 StudyHub</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  <div class="auth-card" data-aos="zoom-in">
+    <h2 class="fw-bold mb-3">Create Account ✨</h2>
+    <p class="text-muted mb-4">Join StudyHub and simplify your study journey!</p>
 
-      <div class="collapse navbar-collapse" id="navMenu">
-        <ul class="navbar-nav ms-auto align-items-center">
-          <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard</a></li>
-          <li class="nav-item"><a class="nav-link" href="profile.html">Profile</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-          <li class="nav-item ms-2">
-            <button class="btn btn-outline-light btn-sm" data-theme-toggle onclick="toggleTheme(this)">🌙 Dark</button>
-          </li>
-        </ul>
+    <form id="registerForm">
+      <div class="mb-3">
+        <input type="text" id="regUsername" class="form-control" placeholder="Full Name" required />
       </div>
-    </div>
-  </nav>
+      <div class="mb-3">
+        <input type="email" id="regEmail" class="form-control" placeholder="Email" required />
+      </div>
+      <div class="mb-3">
+        <input type="password" id="regPassword" class="form-control" placeholder="Password" required />
+      </div>
+      <button type="submit" class="btn btn-gradient w-100 py-2">Register</button>
+    </form>
 
-  <main class="container mt-5">
-    <div class="card mx-auto shadow p-4" style="max-width: 450px;">
-      <h3 class="text-center mb-4 text-primary fw-bold">Create Account</h3>
-      <form id="registerForm">
-        <div class="mb-3">
-          <label class="form-label">Username</label>
-          <input type="text" id="username" class="form-control" required />
-        </div>
-        <div class="mb-3">
-          <label class="form-label">Email</label>
-          <input type="email" id="email" class="form-control" required />
-        </div>
-        <div class="mb-3">
-          <label class="form-label">Password</label>
-          <input type="password" id="password" class="form-control" required />
-        </div>
-        <button type="submit" class="btn btn-primary w-100">Register</button>
-        <p class="text-center mt-3 mb-0">
-          Already have an account? <a href="login.html">Login</a>
-        </p>
-      </form>
-    </div>
-  </main>
+    <p class="mt-3 mb-0 text-muted">Already have an account? 
+      <a href="login.html" class="link">Login here</a>
+    </p>
+  </div>
 
   <!-- Toast + Spinner -->
   <div class="position-fixed bottom-0 end-0 p-3" style="z-index:1100"><div id="toastBox"></div></div>
   <div id="loadingSpinner" class="position-fixed top-50 start-50 translate-middle d-none" style="z-index:2000;">
-    <div class="spinner-border text-primary" style="width:4rem;height:4rem" role="status">
+    <div class="spinner-border text-light" style="width:4rem;height:4rem" role="status">
       <span class="visually-hidden">Loading...</span>
     </div>
   </div>
 
-  <script type="module" src="js/auth.js"></script>
-  <script src="js/theme.js"></script>
-  <script>updateThemeButtons();</script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="js/uiHelpers.js"></script>
+  <script type="module" src="js/auth.js"></script>
+  <script>AOS.init();</script>
 </body>
 </html>
